<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp"
            tools:context=".MainActivity">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5sp"
                android:text="Settings"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Name"
                android:layout_marginTop="5sp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/userNameInput"
                android:hint="Enter your name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="DOB"
                android:layout_marginTop="5sp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <DatePicker
                android:id="@+id/dateOfBirthInput"
                android:inputType="text|date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Email"
                android:layout_marginTop="5sp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/emailInput"
                android:hint="Enter your mail id .."
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp">
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="save"
                    android:onClick="onSaveClick"
                    android:layout_marginRight="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/revertButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:onClick="onRevertClick"
                    android:text="revert"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

</android.support.v4.widget.NestedScrollView>